<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ImageView
        android:id="@+id/profile_image_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/example_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <LinearLayout
       android:id="@+id/linear_firstName"
       android:orientation="horizontal"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/profile_image_detail"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="70dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:text="@string/first_name"
           android:textAlignment="textStart"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:layout_marginEnd="20dp"
           android:text=":"
           android:textAlignment="textStart"
           />
       <TextView
           android:id="@+id/first_name_detail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:layout_marginStart="5dp"
           android:layout_marginEnd="20dp"
           android:text="@string/first_name"
           android:textAlignment="textStart"
           />

   </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_lastName"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/last_name"
            android:textAlignment="textStart"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text=":"
            android:textAlignment="textStart"
            />
        <TextView
            android:id="@+id/last_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/last_name"
            android:textAlignment="textStart"
             />



    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_fullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_lastName"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/name"
            android:textAlignment="textStart"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text=":"
            android:textAlignment="textStart"
            />
        <TextView
            android:id="@+id/full_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/name"
            android:textAlignment="textStart"
            />

    </LinearLayout>
    <LinearLayout

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_fullName"
        app:layout_constraintVertical_bias="0.02"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/email"
            android:textAlignment="textStart"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text=":"
            android:textAlignment="textStart"
            />
        <TextView
            android:id="@+id/email_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/email"
            android:textAlignment="textStart"
           />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>